<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <!--<TextView android:text="@string/hello_world" android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/introduction"
            android:id="@+id/textView1"
            android:layout_column="4" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/name"
            android:layout_column="7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/year"
            android:layout_column="14" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/movie"
            android:id="@+id/textViewMovie"
            android:layout_column="4" />
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/movieName"
            android:layout_column="7"
            android:minWidth="100dp"
            android:inputType="text"
            />

        <EditText
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/movieYear"
            android:layout_column="14"
            android:minWidth="30dp"
            android:inputType="number"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tv"
            android:id="@+id/textViewTV"
            android:layout_column="4" />
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/TVName"
            android:layout_column="7"
            android:minWidth="100dp"
            android:inputType="text"/>

        <EditText
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/TVYear"
            android:layout_column="14"
            android:minWidth="30dp"
            android:inputType="number"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:id="@+id/searchButton"
            android:layout_column="14" />
    </TableRow>
</TableLayout>
